<resources>
    <string name="app_name">MobileApplication</string>
    <string name="coffee_splash_image">Coffee Splash Image</string>
    <string name="choice_your_nfavorite_coffee">Choice your \nFavorite Coffee</string>
    <string name="the_best_grain_the_finest_roast_nthe_powerfull_flavour">The best grain, the finest roast\nthe powerfull flavour</string>
    <string name="get_started">Get Started</string>
    <string name="search_anything">Search anything...</string>
    <string name="category">Category</string>
    <string name="popular_coffees">Popular Coffees</string>
    <string name="see_all">See all</string>
    <string name="title">Title</string>
    <string name="back">Back</string>
    <string name="coffee_size">Coffee Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="qty">Qty.</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="description">Description</string>
    <string name="sample_text">TextView</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="price_zero">$0</string>
    <string name="desc_main_image">Main product image</string>
    <string name="desc_favorite_icon">Favorite icon</string>
    <string name="desc_back_button">Back button icon</string>
    <string name="desc_star_icon">Rating star icon</string>
    <string name="apply">Apply</string>
    <string name="cart">Cart</string>
</resources>