<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/cream"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <ScrollView
        android:layout_width="1352dp"
        android:layout_height="2520dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/picMain"
                    android:layout_width="1356dp"
                    android:layout_height="725dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/desc_main_image"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/desc_favorite_icon"
                    app:srcCompat="@drawable/favorite_white" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.079">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="63dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/desc_back_button"
                        android:layout_marginEnd="1164dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/back"
                        app:tint="@color/white"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteY="48dp" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/textView6"
                android:layout_width="678dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="60dp"
                tools:layout_editor_absoluteY="48dp" />

            <LinearLayout
                android:layout_width="1220dp"
                android:layout_height="674dp"
                android:layout_marginTop="-50dp"
                android:background="@drawable/cream_top_corner_bg"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/TitleTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:textColor="@color/darkBrown"
                    android:textSize="60sp"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="99dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/coffee_size"
                    android:textColor="@color/darkBrown"
                    android:textSize="45sp"
                    android:textStyle="bold"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginVertical="16dp"
                    android:background="@drawable/orange_bg"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/small"
                        android:layout_width="wrap_content"
                        android:layout_height="76dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/small"
                        android:textColor="@color/darkBrown"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mediumBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="76dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/medium"
                        android:textColor="@color/darkBrown"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/LargeBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="76dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/large"
                        android:textColor="@color/darkBrown"
                        android:textSize="40sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="101dp"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/qty"
                        android:textColor="@color/darkBrown"
                        android:textSize="45sp"
                        android:textStyle="bold" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="261dp"
                        android:layout_height="83dp"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/stroke_brown_bg">

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="60dp"
                            android:layout_height="80dp"
                            android:text="@string/minus"
                            android:textSize="45sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.158"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.333" />

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="50dp"
                            android:layout_height="80dp"
                            android:text="@string/plus"
                            android:textSize="40sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.731"
                            app:layout_constraintStart_toEndOf="@+id/textView15"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="1.0" />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/one"
                            android:textColor="@color/darkBrown"
                            android:textSize="40sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/textView14"
                            app:layout_constraintStart_toEndOf="@+id/textView15"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/zero"
                        android:textAlignment="textEnd"
                        android:textColor="@color/darkBrown"
                        android:textSize="40sp"

                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:contentDescription="@string/desc_star_icon"
                        android:layout_width="65dp"
                        android:layout_height="71dp"
                        android:layout_marginStart="16dp"
                        app:srcCompat="@drawable/star" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_margin="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/description"
                    android:textColor="@color/darkBrown"
                    android:textSize="45sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/sample_text"
                    android:textColor="@color/darkBrown"
                    android:textSize="45sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="32dp"
                    android:background="@drawable/brown_full_corner_bg">

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="184dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:text="@string/add_to_cart"
                        android:textColor="@color/white"
                        android:textSize="35sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="84dp"
                        android:text="@string/price_zero"
                        android:textColor="@color/white"
                        android:textSize="45sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.304" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="1dp"
                        android:layout_height="0dp"
                        android:layout_marginHorizontal="32dp"
                        android:layout_marginVertical="12dp"
                        android:background="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/textView23"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

