<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightCream"
    tools:context=".MainActivity">

    <!-- Scrollable Content -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/customBottomNav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Search bar and settings -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/white_bg"
                    android:drawableStart="@drawable/search_icon"
                    android:drawablePadding="8dp"
                    android:hint="@string/search_anything"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="@color/darkBrown"
                    android:textColorHint="@color/darkBrown" />

                <ImageView
                    android:id="@+id/settingsIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/dark_brown_bg"
                    android:padding="12dp"
                    app:srcCompat="@drawable/settings" />
            </LinearLayout>

            <!-- Banner -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/banner"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintDimensionRatio="16:9"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:shapeAppearanceOverlay="@style/CircleImageView"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ProgressBar
                    android:id="@+id/progressBarBanner"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/orange"
                    app:layout_constraintTop_toTopOf="@id/banner"
                    app:layout_constraintBottom_toBottomOf="@id/banner"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Category label -->
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Category RecyclerView -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressBarCategory"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/orange"
                    app:layout_constraintTop_toTopOf="@+id/recyclerViewCat"
                    app:layout_constraintBottom_toBottomOf="@+id/recyclerViewCat"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewCat"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:clipToPadding="false"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Popular section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_weight="1"
                    android:text="@string/popular_coffees"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/see_all"
                    android:textColor="@color/black" />
            </LinearLayout>

            <!-- Popular RecyclerView -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressBarPopular"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:indeterminateTint="@color/orange"
                    app:layout_constraintTop_toTopOf="@id/recyclerViewPopular"
                    app:layout_constraintBottom_toBottomOf="@id/recyclerViewPopular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewPopular"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:clipToPadding="false"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/customBottomNav"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@color/darkBrown"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/btn_1" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Explore"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="3dp"/>
        </LinearLayout>

        <!-- Item 2 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:contentDescription="Favorites"
                app:srcCompat="@drawable/btn_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cart"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="2dp" />
        </LinearLayout>

        <!-- Item 3 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:contentDescription="Orders"
                app:srcCompat="@drawable/btn_3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Favourites"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="2dp" />
        </LinearLayout>

        <!-- Item 4 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:contentDescription="Cart"
                app:srcCompat="@drawable/btn_4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="My Order"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="2dp" />
        </LinearLayout>

        <!-- Item 5 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:contentDescription="Settings"
                app:srcCompat="@drawable/btn_5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="2dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
